--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@angular/platform-browser-dynamic": "9.0.6",
     "@angular/router": "9.0.6",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
-    "bootstrap": "4.1.2",
+    "bootstrap": "^4.5.2",
     "core-js": "3.6.4",
-    "jquery": "3.2.1",
+    "jquery": "^3.5.1",
     "jw-bootstrap-switch-ng2": "2.0.1",
     "ng2-nouislider": "1.7.12",
+    "ngx-spinner": "^8.0.3",
     "nouislider": "9.2.0",
     "popper.js": "1.14.4",
     "rxjs": "6.5.4",
@@ -39,7 +40,7 @@
     "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.6",
+    "@angular-devkit/build-angular": "^0.901.9",
     "@angular/cli": "9.0.6",
     "@angular/compiler-cli": "9.0.6",
     "@angular/language-service": "9.0.6",
