--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jw-bootstrap-switch-ng2": "2.0.1",
     "ng2-nouislider": "1.7.12",
     "ngx-spinner": "^8.0.3",
+    "ngx-toastr": "^8.0.3",
     "nouislider": "9.2.0",
     "popper.js": "1.14.4",
     "rxjs": "6.5.4",
