--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@angular/animations": "9.0.6",
+    "@angular-devkit/build-angular": "^0.901.9",
     "@angular/common": "9.0.6",
     "@angular/compiler": "9.0.6",
     "@angular/core": "9.0.6",
